css/main.css
/* ... */
body {
    height: 100%;
    -webkit-font-smoothing: antialiased;
    overflow-x: hidden;
    font-family: 'Roboto', sans-serif;
}
h1 { font-size: 30px; font-size: 1.8em; line-height: 1.5; }
h2 { font-size: 26px; font-size: 1.6em; line-height: 1; }
h3 { font-size: 22px; font-size: 1.3em; line-height: 1.2; }
h4 { font-size: 18px; font-size: 1.1em; line-height: 1.125; }
h5 { font-size: 16px; font-size: 1em; line-height: 1.125; }
h6 { font-size: 14px; font-size: 0.8em; line-height: 1.125; }
p { font-size: 16px; font-size: 1em; line-height: 1.3; }

main {
  position: relative;
  height: 100%;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -ms-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

.btn {
    border: none;
    color: #e1e1e1;
    background: none;
    cursor: pointer;
    padding: 15px 30px;
    display: inline-block;
    margin: 15px 5px 10px 0px;
    letter-spacing: 0.5px;
    font-weight: 700;
    font-size: 1rem;
    font-size: 16px;
    outline: none;
    position: relative;
    border-radius: 8px;
    float: left;
}

/*  ----- NAVIGATION -----  */

nav {
  position: absolute;
  top: 5%;
  left: 3%;
  z-index: 21;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -ms-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

  nav ul {
    
  }

    nav ul li {
      display: inline-block;
    }

      nav ul li a {
        font-size: 16px;
        font-size: 1em;
        width: auto;
        padding: 10px 5px 5px;
        margin: 0 5px;
        color: #ffffff;
      }

        nav ul li a:hover {
          color: #f9eC23;
          border-bottom: 1px solid #f9eC23;
        }

/*  ----- MAP -----  */

#map {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 30%;
  left: calc(-30% + 10px);
  background: #eb1c3c;
  border-right: 10px solid #eb1c3c;
  z-index: 16;
  opacity: 0.8;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -ms-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

  #map > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 90%;
  }

  #map-btn {
    position: absolute;
    top: 30%;
    right: -45px;
    width: 40px;
    height: auto;
    background: #eb1c3c;
  }

    #map-btn img {
      /*background: #eb1c3c;*/
    }

/*  ----- NOTEBOOK -----  */

#notebook {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 30%;
  right: calc(-30% + 10px);
  background: #eb1c3c;
  border-left: 10px solid #eb1c3c;
  z-index: 16;
  opacity: 0.8;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -ms-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

  #notebook > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 90%;
  }

  #notebook-btn {
    position: absolute;
    top: 30%;
    left: -45px;
    width: 40px;
    height: auto;
    background: #eb1c3c;
  }

    #notebook-btn img {
      /*background: #eb1c3c;*/
    }

/*  ----- SOCIAL -----  */

#social {
  position: absolute;
  bottom: 5%;
  left: 3%;
  z-index: 15;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -ms-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

  #social:-webkit-full-screen {
    z-index: 2147483647!important;
  }

  #social ul li {
      display: inline-block;
    }

    #facebook, #twitter {
      width: 40px;
      height: 40px;
      padding: 10px 5px 5px;
      margin: 0 5px;
    }

/*  ----- HOMEPAGE -----  */

#home-bg {
  width: 100%;
  background: url('../images/valhaven.jpg') no-repeat;
  background-size: cover;
  background-position: 50%;
  position: fixed;
  z-index: 13;
}

#home-btn {
  position: absolute;
  z-index: 16;
  bottom: 30%;
  left: 50%;
  font-weight: 700;
  -webkit-transform: translate(-50%, 50%);
  -moz-transform: translate(-50%, 50%);
  -ms-transform: translate(-50%, 50%);
  -o-transform: translate(-50%, 50%);
  transform: translate(-50%, 50%);
  background: #f9eC23;
  color: #58595b;
}

#disclaimer {
  color: #fff;
  position: absolute;
  width: 60%;
  max-width: 600px;
  bottom: 5%;
  left: 50%;
  text-align: center;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  -o-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}

/*  ----- CREDIT -----  */

#inner-container {
  color: #ffffff;
  padding-top: 8%;
  margin: 0 auto;
  width: 60%;
  max-width: 800px;
  min-width: 100px;
}

/*  ----- VIDEO CONTROLS -----  */

#video-container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

  #video-container video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
    height: auto;
    -webkit-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -ms-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    /*background: url('../images/valhaven.jpg') no-repeat;*/
    background: #000;
    background-size: cover;
    background-attachment: fixed;
  }

  #video-container video::-webkit-media-controls, video::-webkit-media-controls-enclosure {
    display: none !important;
  }
/* ... */

